--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ a:visited {
     text-decoration: none;
     font-weight: bolder;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 2rem;
+    font-size: 2.7rem;
     background-color: transparent;
     width: 80vw;
     position: fixed;
@@ -34,16 +34,37 @@ a:visited {
     font-weight: bolder
 }
 
+.bibi-cart2{
+    color: red;
+
+}
+
 
 
 
 .dropdown{
     display: flex;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    align-items: center;
+    margin: 2.5rem;
     justify-content: space-between;
+    font-size: 1.5rem;
+    width: 95vw;
+    position: fixed;
+    text-shadow: 1px 2px 3px rgb(185, 1, 1);
+    color: red;
+}
+
+.shopaccount{
+    display: flex;
+    margin-left: 1rem;
+    justify-content: space-between;
+    width:12rem;
+}
+
+.cartlink{
+    display: flex;
     margin-right: 2rem;
-    font-size: 1.2rem;
-    width: 12rem;
 }
 
 .home{
@@ -83,4 +104,22 @@ align-items: flex-end;
     font-weight: bolder;
     font-size: 5rem;
     text-decoration: none;
+}
+
+.loginwindow{
+    display: flex;
+    margin-top: 5rem;
+    position:absolute;
+}
+
+.productswindow{
+    display: flex;
+    margin-top: 7rem;
+    position:absolute;
+}
+
+.cartwindow{
+    display: flex;
+    margin-top: 7rem;
+    position:absolute;
 }
