--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ a:visited {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.2rem;
     background-color: transparent;
-    margin:0rem 0rem 0rem 1.5rem;
+    margin:0rem 2rem 0rem 1.5rem;
     width: 15rem;
 }
 
@@ -78,8 +78,89 @@ a:visited {
 .loginwindow{
     display: flex;
     margin-top: 5rem;
-    position:absolute;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100vw;
+    height: 100vh;
 }
+
+.logindiv{
+    display: flex;
+    background-color: transparent;
+    height: 50vh;
+    width: 50vw;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+    padding-bottom: 7rem;
+}
+
+.logintitle{
+    display: flex;
+    margin: 1rem 0rem 1rem 0rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+}
+
+.username{
+    display: flex;
+    width: 20rem;
+    height: 2.5rem;
+    margin: .5rem 0rem;
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(240, 240, 240);
+    border: none;
+    color: white;
+    border-radius: 5px 5px;
+    padding: .5rem;
+    box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
+.password{
+    display: flex;
+    width: 20rem;
+    height: 2.5rem;
+    margin: .5rem 0rem 1rem 0rem;
+    font-family: 'Montserrat', sans-serif;
+    background-color:rgb(240, 240, 240);
+    color: white;
+    border: none;
+    border-radius: 5px 5px;
+    padding: .5rem;
+    box-shadow: 1px 1px 3px rgb(122, 122, 122);
+    ;
+}
+
+.logbtn{
+    display: flex;
+    width: 10rem;
+    height: 2rem;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(148, 172, 255);
+    color: white;
+    border: none;
+    border-radius: 5px 5px;
+    box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
+.createacct{
+    display: flex;
+    align-items: center;
+    height: 2rem;
+    width: 10rem;
+    justify-content: center;
+    border: none;
+    text-decoration: none;
+    border-radius: 5px 5px;
+    background-color: black;
+    color: white;
+    box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
 
 .productswindow{
     display: flex;
@@ -112,7 +193,6 @@ a:visited {
 
 .carddiv{
     display: flex;
-    margin-top: 1rem;
 }
 .card{
     width: 33rem;
