--- a/public/style.css
+++ b/public/style.css
@@ -202,15 +202,21 @@ a:visited {
 }
 .card{
     width: 33rem;
-    margin: 4rem 1rem 1rem 1rem;
+    height: 40rem;
+    margin: 6rem 2rem 0rem 1rem;
+    position:sticky;
 }
 
 .card-title{
      font-family: 'Montserrat', sans-serif;
+     display: flex;
 }
 
 .ptext{
+    display: flex;
+    height: 9rem;
     font-family: 'Open Sans', sans-serif;
+    overflow: scroll;
 }
 
 .cardbtn{
@@ -219,9 +225,24 @@ a:visited {
     background-color: black;
     color: white;
     height: 2rem;
-    width: 27rem;
+    width: 30.5rem;
     align-items: center;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
     border-radius: 5px 5px;
+}
+
+.flexwrap{
+    display: flex;
+    width: 100vw;
+    flex-wrap: wrap;
+}
+
+.searchForm{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position:fixed;
+    width: 100vw;
+    margin-top: 3rem; 
 }
