--- a/public/style.css
+++ b/public/style.css
@@ -246,3 +246,62 @@ a:visited {
     width: 100vw;
     margin-top: 3rem; 
 }
+
+/* <----- check out page ----> */
+
+.checkoutRow {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0 -16px;
+}
+
+.checkoutColumn-1 {
+    -ms-flex: 50%;
+    flex: 50%;
+    padding: 0 16px;
+}
+
+.checkoutColumn {
+    -ms-flex: 75%;
+    flex: 75%;
+    padding: 0 16px;
+}
+
+.checkoutContainer {
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+}
+
+.checkoutLabel {
+    margin-bottom: 10px;
+    display: block;
+}
+
+input[type=text] {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.checkoutBtm {
+    text-align: center;
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.checkoutBtm:hover {
+    background-color: #45a049;
+}
