--- a/public/style.css
+++ b/public/style.css
@@ -1,397 +1,531 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans&display=swap");
 
-*{
-    box-sizing: border-box;
-    text-decoration: none;
+/* All Pages*/
+* {
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-a:visited { 
-    text-decoration: none;
-    color:unset;
+a:visited {
+  text-decoration: none;
+  color: unset;
 }
 
 
-.nav-seperation{
+.nav-seperation {
+  display: flex;
+  color: rgb(0, 0, 0);
+  background-color: transparent;
+  position: absolute;
+  margin-top: 1rem;
+  width: 100vw;
+}
+
+.graceautos {
+  display: flex;
+  text-decoration: none;
+  font-weight: bolder;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2rem;
+  background-color: transparent;
+  position: fixed;
+  margin: 0rem 5rem 0rem 1.5rem;
+  width: 15vw;
+}
+
+.shopaccountcart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 15rem;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(0, 0, 0);
+  margin: 0.2rem 1rem;
+  font-size: 1rem;
+  position: fixed;
+  top: 1;
+  right: 0;
+}
+
+.home {
+  display: flex;
+  height: 110vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+  position: fixed;
+  z-index: -1;
+}
+
+.browse {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  width: 50vw;
+  height: 90vh;
+  margin: 10vh 0 10vh 25vw;
+  align-items: flex-end;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 2.5vh;
+}
+
+.slogan {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  position: absolute;
+  margin-top: 10rem;
+  font-size: 1.3rem;
+  font-style: italic;
+  font-family: "Montserrat", sans-serif;
+}
+
+.browsebtnl {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  margin-bottom: 2rem;
+  border: none;
+  border-radius: 5px 5px;
+  font-size: 80%;
+  width: 20vw;
+  height: 4vh;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 1px 1px 2px black;
+  background-color: rgb(127, 127, 127, 0.5);
+  color: white;
+}
+
+.browsebtnr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  margin-bottom: 2rem;
+  font-size: 80%;
+  border: none;
+  border-radius: 5px 5px;
+  width: 20vw;
+  height: 4vh;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 1px 1px 2px black;
+  background-color: rgb(127, 127, 127, 0.5);
+  color: white;
+}
+
+.modelshome {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  position: absolute;
+  margin-bottom: 20rem;
+  font-weight: bolder;
+  font-size: 5rem;
+  text-decoration: none;
+}
+
+.loginwindow {
+  display: flex;
+  margin-top: 5rem;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
+}
+
+.logindiv {
+  display: flex;
+  background-color: transparent;
+  height: 50vh;
+  width: 50vw;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-bottom: 7rem;
+}
+
+.logintitle {
+  display: flex;
+  margin: 1rem 0rem 1rem 0rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+}
+
+.username {
+  display: flex;
+  width: 20rem;
+  height: 2.5rem;
+  margin: 0.5rem 0rem;
+  font-family: "Montserrat", sans-serif;
+  background-color: rgb(240, 240, 240);
+  border: none;
+  color: white;
+  border-radius: 5px 5px;
+  padding: 0.5rem;
+  box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
+.password {
+  display: flex;
+  width: 20rem;
+  height: 2.5rem;
+  margin: 0.5rem 0rem 1rem 0rem;
+  font-family: "Montserrat", sans-serif;
+  background-color: rgb(240, 240, 240);
+  color: white;
+  border: none;
+  border-radius: 5px 5px;
+  padding: 0.5rem;
+  box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+.userlog {
+  font-family: "Montserrat", sans-serif;
+}
+
+.passlog {
+  font-family: "Montserrat", sans-serif;
+}
+
+.logbtn {
+  display: flex;
+  width: 10rem;
+  height: 2rem;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(148, 172, 255);
+  color: white;
+  border: none;
+  border-radius: 5px 5px;
+  box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
+.createacct {
+  display: flex;
+  align-items: center;
+  height: 2rem;
+  width: 10rem;
+  justify-content: center;
+  border: none;
+  text-decoration: none;
+  border-radius: 5px 5px;
+  background-color: black;
+  color: white;
+  box-shadow: 1px 1px 3px rgb(122, 122, 122);
+}
+
+.checkoutpage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50vw;
+  height: 90vh;
+  background-color: aquamarine;
+  margin: 10vh 25vw 0vh 25vw;
+  position: absolute;
+}
+
+.formdiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+.container {
+  display: flex;
+  height: 35vh;
+  width: 50vw;
+  background-color: rgb(175, 0, 0);
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.payment {
     display: flex;
-    color: rgb(0, 0, 0);
-    background-color: transparent;
-    position: absolute;
-    margin-top: 1rem;
-    width: 100vw;
-}
-
-.graceautos{
-    display: flex;
-    text-decoration: none;
-    font-weight: bolder;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.2rem;
-    background-color: transparent;
-    position: fixed;
-    margin:0rem 5rem 0rem 1.5rem;
-    width: 15vw;
-}
-
-.shopaccountcart{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 15rem;
-    font-family: 'Montserrat', sans-serif;
-    color: rgb(0, 0, 0);
-    margin:.2rem 1rem;
-    font-size: 1rem;
-    position: fixed;
-    top:1;
-    right:0;
-
-}
-
-.home{
-    display: flex;
-    height: 110vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    object-fit:cover;
-    position:fixed;
-    z-index: -1;
-}
-
-.browse{
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
+    height: 28vh;
     width: 50vw;
-    height: 90vh;
-    margin: 10vh 0 10vh 25vw;
-    align-items: flex-end;
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: 2.5vh;
-}
-
-.slogan{
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    position: absolute;
-    margin-top: 10rem;
-    font-size: 1.3rem;
-    font-style: italic;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.browsebtnl{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    margin-bottom: 2rem;
-    border: none;
-    border-radius: 5px 5px;
-    font-size: 80%;
-    width: 20vw;
-    height: 4vh;
-    font-family: 'Montserrat', sans-serif;
-    box-shadow: 1px 1px 2px black;
-    background-color: rgb(127, 127, 127, 0.5);
-    color: white;
-}
-
-.browsebtnr{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    margin-bottom: 2rem;
-    font-size: 80%;
-    border: none;
-    border-radius: 5px 5px;
-    width: 20vw;
-    height: 4vh;
-    font-family: 'Montserrat', sans-serif;
-    box-shadow: 1px 1px 2px black;
-    background-color: rgb(127, 127, 127, 0.5);
-    color: white;
-}
-
-
-
-.modelshome{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: absolute;
-    margin-bottom: 20rem;
-    font-weight: bolder;
-    font-size: 5rem;
-    text-decoration: none;
-}
-
-.loginwindow{
-    display: flex;
-    margin-top: 5rem;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    width: 100vw;
-    height: 100vh;
-}
-
-.logindiv{
-    display: flex;
-    background-color: transparent;
-    height: 50vh;
-    width: 50vw;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0 auto;
-    padding-bottom: 7rem;
-}
-
-.logintitle{
-    display: flex;
-    margin: 1rem 0rem 1rem 0rem;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
-}
-
-.username{
-    display: flex;
-    width: 20rem;
-    height: 2.5rem;
-    margin: .5rem 0rem;
-    font-family: 'Montserrat', sans-serif;
-    background-color: rgb(240, 240, 240);
-    border: none;
-    color: white;
-    border-radius: 5px 5px;
-    padding: .5rem;
-    box-shadow: 1px 1px 3px rgb(122, 122, 122);
-}
-
-.password{
-    display: flex;
-    width: 20rem;
-    height: 2.5rem;
-    margin: .5rem 0rem 1rem 0rem;
-    font-family: 'Montserrat', sans-serif;
-    background-color:rgb(240, 240, 240);
-    color: white;
-    border: none;
-    border-radius: 5px 5px;
-    padding: .5rem;
-    box-shadow: 1px 1px 3px rgb(122, 122, 122);
-}
-.userlog{
-    font-family: 'Montserrat', sans-serif;
-}
-
-.passlog{
-    font-family: 'Montserrat', sans-serif;
-}
-
-.logbtn{
-    display: flex;
-    width: 10rem;
-    height: 2rem;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(148, 172, 255);
-    color: white;
-    border: none;
-    border-radius: 5px 5px;
-    box-shadow: 1px 1px 3px rgb(122, 122, 122);
-}
-
-.createacct{
-    display: flex;
-    align-items: center;
-    height: 2rem;
-    width: 10rem;
-    justify-content: center;
-    border: none;
-    text-decoration: none;
-    border-radius: 5px 5px;
-    background-color: black;
-    color: white;
-    box-shadow: 1px 1px 3px rgb(122, 122, 122);
-}
-
-
-.productswindow{
-    display: flex;
-    margin-top: 7rem;
-    position:absolute;
-}
-
-.cartwindow{
-    display: flex;
-    margin-top: 7rem;
-    position:absolute;
-}
-
-.createwindow{
-    display: flex;
-    margin-top: 7rem;
-    position:absolute;
-}
-
-.registerwindow{
-    display: flex;
-    margin-top: 7rem;
-    position:absolute;
-}
-
-.shopaccountcart{
-    display: flex;
-    margin-left: 60rem;
-}
-
-.carddiv{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    z-index: -1;
-
-}
-
-.card{
-    width: 30rem;
-    height: 43.5rem;
-    margin: 6rem .5rem 1rem .5rem;
-    position:sticky;
-}
-
-.card-title{
-     font-family: 'Montserrat', sans-serif;
-     display: flex;
-}
-
-.card-img-top{
-    object-fit:cover;
-}
-
-.ptext{
-    display: flex;
-    height: 9rem;
-    font-family: 'Open Sans', sans-serif;
-    overflow: scroll;
-}
-
-.cardbtn{
-    display: flex;
-    border: none;
     background-color: rgb(0, 0, 0);
-    color: white;
-    height: 2rem;
-    width: 28.5rem;
     align-items: center;
     justify-content: center;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 5px 5px;
-    position: relative;
-    margin: 0 auto;
-}
-
-.flexwrap{
-    display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 100vh;
-    overflow: scroll;
+    margin: 1rem;
 }
 
-#inv{
-    margin-bottom: .5rem;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.searchForm{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position:fixed;
-    width: 100vw;
-    margin-top: 3rem; 
-}
-
-.searchinput{
+.header {
     display: flex;
     width: 50vw;
-    margin: 0rem .5rem 0rem .5rem ;
-    border: 1px solid rgb(221, 221, 221)
 }
 
-.searchbtn{
+.formlabel{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    width: 5rem;
-    box-shadow: 1px 1px 2px black;
+    margin: 0rem 1rem;
+}
+
+.checkoutbtn{
+    display: flex;
+    color: red;
+}
+
+.productswindow {
+  display: flex;
+  margin-top: 7rem;
+  position: absolute;
+}
+
+.cartwindow {
+  display: flex;
+  margin-top: 7rem;
+  position: absolute;
+}
+
+.createwindow {
+  display: flex;
+  margin-top: 7rem;
+  position: absolute;
+}
+
+.registerwindow {
+  display: flex;
+  margin-top: 7rem;
+  position: absolute;
+}
+
+.shopaccountcart {
+  display: flex;
+  margin-left: 60rem;
+}
+
+.carddiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+
+.card {
+  width: 30rem;
+  height: 43.5rem;
+  margin: 0rem 0.5rem 5rem 0.5rem;
+  position: sticky;
+}
+
+.card-title {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+}
+
+.card-img-top {
+  object-fit: cover;
+}
+
+.ptext {
+  display: flex;
+  height: 9rem;
+  font-family: "Open Sans", sans-serif;
+  overflow: scroll;
+}
+
+.cardbtn {
+  display: flex;
+  border: none;
+  background-color: #aa0404;
+  color: white;
+  height: 2rem;
+  width: 28.5rem;
+  align-items: center;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 5px 5px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.cardbtn:hover{
+  background-color: #45a049;
+}
+
+.flexwrap {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100vw;
+  height: 100vh;
+  overflow: scroll;
+  margin-top: 5rem;
+  position: fixed;
+  padding-bottom: 1rem;
+}
+
+#inv {
+  margin-bottom: 0.5rem;
+  font-family: "Open Sans", sans-serif;
+}
+
+.searchForm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: 100vw;
+  margin-top: 3rem;
+}
+
+.searchinput {
+  display: flex;
+  width: 50vw;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  border: none;
+  background-color: rgb(255, 255, 255, 0.1);
+}
+
+.searchbtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 5rem;
+  box-shadow: 1px 1px 2px black;
 }
 
 @media (min-width: 720px) {
-   .dropdown{
+  .dropdown {
     display: none;
-} 
-
   }
+}
 
 @media only screen and (max-width: 912px) {
-    .shopaccountcart{
-        display: flex;
-        width: 100vw;
-        justify-content: space-evenly;
-        margin: 2rem 0rem 0rem 2rem;
-    }
+  .shopaccountcart {
+    display: flex;
+    width: 100vw;
+    justify-content: space-evenly;
+    margin: 2rem 0rem 0rem 2rem;
+  }
 
-    .graceautos{
-        display: flex;
-        position:fixed;
-        width: 100vw;
-        justify-content: center;
-        align-items: center;
-        font-size: 1rem;
-        margin: 0 auto;
-    }
+  .graceautos {
+    display: flex;
+    position: fixed;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    margin: 0 auto;
+  }
 
-    .searchForm{
-        display: flex;
-        margin-top: 5.3rem;
-    }
+  .searchForm {
+    display: flex;
+    margin-top: 5.3rem;
+  }
 
-     .carddiv{
-        margin-top: 2rem;
-        width: 100vw;
-     }
-     .cardbtn{
-        width: 75vw;
-     }
+  .carddiv {
+    margin-top: 2rem;
+    width: 100vw;
+  }
+  .cardbtn {
+    width: 75vw;
+  }
 
-     .browse{
-        width: 75vw;
-        margin: 10vh 0 10vh 12.5vw;
-     }
+  .browse {
+    width: 75vw;
+    margin: 10vh 0 10vh 12.5vw;
+  }
 
-     .browsebtnl{
-        font-size: 1.3vh;
-        width: 33vw;
-     }
+  .browsebtnl {
+    font-size: 1.3vh;
+    width: 33vw;
+  }
 
-     .browsebtnr{
-        font-size: 1.3vh;
-        width: 33vw;
-     }
+  .browsebtnr {
+    font-size: 1.3vh;
+    width: 33vw;
+  }
 
-     .slogan{
-        text-align: center;
-     }
-     
-     
-    }
+  .slogan {
+    text-align: center;
+  }
+
+  .flexwrap {
+    display: flex;
+    margin-top: 8rem;
+  }
+
+  .carddiv {
+    margin-top: 0rem;
+  }
+
+  .card {
+    height: 40rem;
+  }
+}
+
+/* <----- check out page ----> */
+
+.checkoutRow {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.checkoutColumn-1 {
+  -ms-flex: 50%;
+  flex: 50%;
+  padding: 0 16px;
+}
+
+.checkoutColumn {
+  -ms-flex: 75%;
+  flex: 75%;
+  padding: 0 16px;
+}
+
+.checkoutContainer {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+  margin: 5rem 5rem auto;
+  width: 85vw;
+}
+
+.checkoutLabel {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.checkin {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.checkoutBtm {
+  text-align: center;
+  background-color: #aa0404;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.checkoutBtm:hover {
+  background-color: #45a049;
+}
