--- a/public/style.css
+++ b/public/style.css
@@ -164,7 +164,7 @@ a:visited {
   font-family: "Montserrat", sans-serif;
   background-color: rgb(240, 240, 240);
   border: none;
-  color: white;
+  color: black;
   border-radius: 5px 5px;
   padding: 0.5rem;
   box-shadow: 1px 1px 3px rgb(122, 122, 122);
@@ -177,7 +177,7 @@ a:visited {
   margin: 0.5rem 0rem 1rem 0rem;
   font-family: "Montserrat", sans-serif;
   background-color: rgb(240, 240, 240);
-  color: white;
+  color: black;
   border: none;
   border-radius: 5px 5px;
   padding: 0.5rem;
